tests/bad/expr-statements/yield_type_mismatch_if.oc
/// fail: Yield type of branch doesn't match previous branches

def main() {
    let x = if true { yield 1 } else { yield "1" }
}